Attempt to fix gitignore

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -35,7 +35,8 @@ jobs:
         with:
           context: .
           push: true
-          tags: user/app:tag
+          tags: |
+            tewariutkarsh22/first_project:latest
       
       - name: Build, Push and Release a Docker container to Heroku. # Your custom step name
         uses: gonuit/heroku-docker-deploy@v1.3.3 # GitHub action name (leave it as it is).
