--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -18,9 +18,16 @@ jobs:
 
 ### ⬇ IMPORTANT PART ⬇ ###
 
+      ### QEMU is an open source machine emulator and virtualizer. It allows users to to build
+      ###  ARM CUDA binaries on your x86 machine without needing a cross compiler
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
       
+
+      ### Docker Buildx is a CLI plugin that extends the docker command with the full support 
+      ### of the features provided by Moby BuildKit builder toolkit. It provides the same user 
+      ### experience as docker build with many new features like creating scoped builder instances 
+      ### and building against multiple nodes concurrently.
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
       
@@ -75,5 +82,32 @@ jobs:
           process_type: web
           
    
+      - name: Generate Deployment Package
+        run: zip -r deploy.zip *
+      
+      - name: Get timestamp
+        uses: gerred/actions/current-time@master
+        id: current-time
+        
+      - name: Run string replace
+        uses: frabert/replace-string-action@master
+        id: format-time
+        with:
+          pattern: '[:\.]+'
+          string: "${{ steps.current-time.outputs.time }}"
+          replace-with: '-'
+          flags: 'g'
+
+      - name: Deploy to EB
+        uses: einaregilsson/beanstalk-deploy@v14
+        with:
+          aws_access_key: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws_secret_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          application_name: ${{ secrets.AWS_APPLICATION_NAME }}
+          environment_name: ${{ secrets.AWS_ENVIRONMENT_NAME }}
+          version_label: "${{ secrets.AWS_APPLICATION_NAME }}-${{ steps.format-time.outputs.replaced }}"
+          region: us-east-2
+          deployment_package: deploy.zip
+
           
 ### ⬆ IMPORTANT PART ⬆ ###
